# otreal

./: CMakeLists.txt  README.md  config.lua.dist  teste.sql  vcpkg.json
data/: stages.lua
data-otservbr-global/lib/core/: storages.lua
data-otservbr-global/npc/: comissario_eleitoral.lua  the_oracle.lua
data-otservbr-global/scripts/globalevents/: eleicao.lua
data/events/scripts/: player.lua
data/libs/functions/: player.lua
data/libs/systems/: daily_reward.lua  load.lua
data/modules/scripts/daily_reward/: daily_reward.lua
data/modules/scripts/gamestore/: gamestore.lua  init.lua
data/npclib/npc_system/: bank_system.lua
data/scripts/creaturescripts/player/: login.lua
data/scripts/talkactions/government/: federal_tax.lua  state_tax.lua
src/: CMakeLists.txt  canary_server.cpp  canary_server.hpp  main.cpp
src/config/: config_enums.hpp  configmanager.cpp
src/creatures/: creature.cpp  creatures_definitions.hpp
src/creatures/combat/: combat.cpp
src/creatures/monsters/: monster.cpp
src/creatures/npcs/: npc.cpp
src/creatures/players/: player.cpp  player.hpp
src/enums/: item_attribute.hpp
src/gui/: CMakeLists.txt  log_sink.hpp  main.cpp  main_window.cpp  main_window.hpp
src/io/: iologindata.cpp
src/io/functions/: iologindata_load_player.cpp
src/items/: item.cpp  item.hpp  items_definitions.hpp
src/items/weapons/: weapons.hpp
src/lua/creature/: movement.cpp
src/map/house/: house.cpp
src/server/: server.cpp
src/utils/: tools.cpp  wildcardtree.cpp
tests/unit/utils/: CMakeLists.txt  wildcard_tree_test.cpp
(+12 files in other folders)
